--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
       with:
         args: >
           -Dsonar.organization=team-devopsport
-          -Dsonar.projectKey=devopsport_${{ env.REPOSITORY_NAME }}_
+          -Dsonar.projectKey=devopsport_${{ env.REPOSITORY_NAME }}
           -Dsonar.qualitygate.wait=true
       env:
         GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
